tests/invalid/generated_binop_div_str_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: bool = True
    z = x / y
